Now application is using mysql instead of mongodb