@@ -4,6 +4,7 @@ import com.smartpeso.model.Transaction;
 import com.smartpeso.model.User;
 import com.smartpeso.model.dto.transaction.EditTransactionRequest;
 import com.smartpeso.model.dto.transaction.TransactionDTO;
+import com.smartpeso.model.dto.transaction.TransactionData;
 import com.smartpeso.repositories.TransactionRepository;
 import com.smartpeso.services.transaction.TransactionNotFoundException;
 import com.smartpeso.services.transaction.TransactionService;
@@ -39,82 +40,70 @@ public class TransactionServiceTest {
     public void createTransaction_givenValidTransactionAndNoRepositoryErrors_shouldReturnCreatedTransaction() {
         TransactionDTO transactionDTO = getTransactionDTO();
         User user = getUser();
-        Transaction transaction = transactionFromTransactionDTO(transactionDTO);
-        when(transactionRepositoryMock.upsertTransaction(any(Transaction.class))).thenReturn(transaction);
+
+        doNothing().when(transactionRepositoryMock).createTransaction(any(TransactionDTO.class), eq(user.getUserId()));
 
         TransactionService unit = new TransactionService(transactionRepositoryMock, transactionValidatorMock);
 
-        Transaction createdTransaction = unit.createTransaction(transactionDTO, user);
+        unit.createTransaction(transactionDTO, user);
 
-        verify(transactionValidatorMock).validateTransaction(any(Transaction.class));
-
-        assertEquals("someId", createdTransaction.getTransactionId());
-        assertEquals("Salary Paycheck", createdTransaction.getName());
-        assertEquals(1000.0, createdTransaction.getValue(), 0.01);
+        verify(transactionValidatorMock).validateTransaction(any(TransactionData.class));
+        verify(transactionRepositoryMock).createTransaction(any(TransactionDTO.class), eq(user.getUserId()));
     }
 
     @Test
     public void createTransaction_givenValidationFails_shouldThrowTransactionValidationException() {
-        doThrow(new TransactionValidationException("validation error")).when(transactionValidatorMock).validateTransaction(any(Transaction.class));
+        doThrow(new TransactionValidationException("validation error")).when(transactionValidatorMock).validateTransaction(any(TransactionData.class));
         TransactionService unit = new TransactionService(transactionRepositoryMock, transactionValidatorMock);
         assertThrows(TransactionValidationException.class, () -> unit.createTransaction(getTransactionDTO(), getUser()));
     }
 
     @Test
     public void getTransactionByUser_shouldReturnOnlyUserTransactions() {
-        when(transactionRepositoryMock.getTransactionsByUserId("someId")).thenReturn(Arrays.asList(createTransaction("id1"), createTransaction("id2"), createTransaction("id3")));
-        when(transactionRepositoryMock.getTransactionsByUserId("otherId")).thenReturn(List.of(createTransaction("id4")));
+        int userId = 123;
+        int otherUserId = 468;
+        when(transactionRepositoryMock.getUserTransactions(userId)).thenReturn(Arrays.asList(createTransaction(222, userId), createTransaction(333, userId), createTransaction(444, userId)));
+        when(transactionRepositoryMock.getUserTransactions(otherUserId)).thenReturn(List.of(createTransaction(900, otherUserId)));
 
         TransactionService unit = new TransactionService(transactionRepositoryMock, transactionValidatorMock);
-        List<Transaction> firstUserTransactions = unit.getTransactions(getUser("someId"));
-        List<Transaction> secondUserTransactions = unit.getTransactions(getUser("otherId"));
+        List<Transaction> firstUserTransactions = unit.getTransactions(getUser(userId));
+        List<Transaction> secondUserTransactions = unit.getTransactions(getUser(otherUserId));
 
         assertEquals(firstUserTransactions.size(), 3);
-        assertEquals("id1", firstUserTransactions.get(0).getTransactionId());
-        assertEquals("id2", firstUserTransactions.get(1).getTransactionId());
-        assertEquals("id3", firstUserTransactions.get(2).getTransactionId());
+        assertEquals(222, firstUserTransactions.get(0).getTransactionId());
+        assertEquals(333, firstUserTransactions.get(1).getTransactionId());
+        assertEquals(444, firstUserTransactions.get(2).getTransactionId());
 
         assertEquals(secondUserTransactions.size(), 1);
-        assertEquals("id4", secondUserTransactions.get(0).getTransactionId());
+        assertEquals(900, secondUserTransactions.get(0).getTransactionId());
     }
 
     @Test
     public void editTransaction_givenExistingTransactionAndValidRequest_shouldReturnUpdatedTransaction() {
-        User user = getUser();
-        user.setUserId("user-transactionId");
+        int userId = 123;
+        int transactionId = 432;
+        User user = getUser(userId);
 
         EditTransactionRequest editTransactionRequest = getEditTransactionRequest();
-        Transaction existingTransaction = createTransaction("someId");
-        existingTransaction.setUserId("user-transactionId");
+        Transaction existingTransaction = createTransaction(transactionId, userId);
 
         when(transactionRepositoryMock.getTransactionById(eq(editTransactionRequest.transactionId()))).thenReturn(Optional.of(existingTransaction));
-        when(transactionRepositoryMock.upsertTransaction(any(Transaction.class))).thenReturn(existingTransaction);
+        doNothing().when(transactionRepositoryMock).updateTransaction(any(Transaction.class));
 
         TransactionService unit = new TransactionService(transactionRepositoryMock, transactionValidatorMock);
-        Transaction editedTransaction = unit.editTransaction(editTransactionRequest, user);
+        unit.editTransaction(editTransactionRequest, user);
 
         verify(transactionRepositoryMock).getTransactionById(eq(editTransactionRequest.transactionId()));
-        verify(transactionValidatorMock).validateTransaction(eq(existingTransaction));
-        verify(transactionRepositoryMock).upsertTransaction(eq(existingTransaction));
-
-        assertEquals(editTransactionRequest.name(), editedTransaction.getName());
-        assertEquals(editTransactionRequest.value(), editedTransaction.getValue());
-        assertEquals(editTransactionRequest.type(), editedTransaction.getType());
-        assertEquals(editTransactionRequest.category(), editedTransaction.getCategory());
-        assertEquals(editTransactionRequest.currency(), editedTransaction.getCurrency());
-        assertEquals(editTransactionRequest.value(), editedTransaction.getValue(), 0.01);
-        assertEquals(editTransactionRequest.description(), editedTransaction.getDescription());
-        assertEquals(editTransactionRequest.paymentMethod().orElse(null), editedTransaction.getPaymentMethod());
+        verify(transactionValidatorMock).validateTransaction(any(TransactionData.class));
+        verify(transactionRepositoryMock).updateTransaction(eq(existingTransaction));
     }
 
     @Test
     public void editTransaction_givenTransactionDoesNotExist_shouldThrowTransactionNotFoundException() {
-        User user = getUser();
-        user.setUserId("user-transactionId");
+        int userId = 777;
+        User user = getUser(userId);
 
         EditTransactionRequest editTransactionRequest = getEditTransactionRequest();
-        Transaction existingTransaction = createTransaction("someId");
-        existingTransaction.setUserId("user-transactionId");
 
         when(transactionRepositoryMock.getTransactionById(eq(editTransactionRequest.transactionId()))).thenReturn(Optional.empty());
 
@@ -125,12 +114,14 @@ public class TransactionServiceTest {
 
     @Test
     public void editTransaction_givenTransactionExistsButBelongsToDifferentUser_shouldThrowTransactionNotFoundException() {
+        int transactionId = 555;
+        int userId = 123;
+        int otherUserId = 31;
         User user = getUser();
-        user.setUserId("user-transactionId");
+        user.setUserId(userId);
 
         EditTransactionRequest editTransactionRequest = getEditTransactionRequest();
-        Transaction existingTransaction = createTransaction("someId");
-        existingTransaction.setUserId("other-user-transactionId");
+        Transaction existingTransaction = createTransaction(transactionId, otherUserId);
 
         when(transactionRepositoryMock.getTransactionById(eq(editTransactionRequest.transactionId()))).thenReturn(Optional.of(existingTransaction));
 
@@ -141,44 +132,43 @@ public class TransactionServiceTest {
 
     @Test
     public void deleteTransaction_givenExistingTransactionAndCorrectUser_shouldNotThrowException() {
-        User user = getUser();
-        user.setUserId("user-transactionId");
+        int transactionId = 555;
+        int userId = 123;
+        User user = getUser(userId);
 
-        Transaction existingTransaction = createTransaction("someId");
-        existingTransaction.setUserId("user-transactionId");
+        Transaction existingTransaction = createTransaction(transactionId, userId);
 
-        when(transactionRepositoryMock.getTransactionById(eq("someId"))).thenReturn(Optional.of(existingTransaction));
+        when(transactionRepositoryMock.getTransactionById(eq(transactionId))).thenReturn(Optional.of(existingTransaction));
 
         TransactionService unit = new TransactionService(transactionRepositoryMock, transactionValidatorMock);
-        unit.deleteTransaction("someId", user);
+        unit.deleteTransaction(transactionId, user);
 
-        verify(transactionRepositoryMock).deleteTransaction(eq(existingTransaction));
+        verify(transactionRepositoryMock).deleteTransaction(eq(existingTransaction.getTransactionId()));
     }
 
     @Test
     public void deleteTransaction_givenNonExistingTransactionAndCorrectUser_shouldNotThrowException() {
         User user = getUser();
 
-        when(transactionRepositoryMock.getTransactionById(eq("otherId"))).thenReturn(Optional.empty());
+        when(transactionRepositoryMock.getTransactionById(eq(333))).thenReturn(Optional.empty());
 
         TransactionService unit = new TransactionService(transactionRepositoryMock, transactionValidatorMock);
 
-        assertThrows(TransactionNotFoundException.class, () -> unit.deleteTransaction("otherId", user));
+        assertThrows(TransactionNotFoundException.class, () -> unit.deleteTransaction(333, user));
     }
 
     @Test
     public void deleteTransaction_givenUserDoesNotHaveTheTransaction_shouldNotThrowException() {
-        User user = getUser();
-        user.setUserId("user-transactionId");
+        int userId = 123;
+        User user = getUser(userId);
 
-        Transaction existingTransaction = createTransaction("someId");
-        existingTransaction.setUserId("other-user-transactionId");
+        Transaction existingTransaction = createTransaction(444, 999);
 
-        when(transactionRepositoryMock.getTransactionById(eq("someId"))).thenReturn(Optional.of(existingTransaction));
+        when(transactionRepositoryMock.getTransactionById(eq(444))).thenReturn(Optional.of(existingTransaction));
 
         TransactionService unit = new TransactionService(transactionRepositoryMock, transactionValidatorMock);
 
-        assertThrows(TransactionNotFoundException.class, () -> unit.deleteTransaction("someId", user));
+        assertThrows(TransactionNotFoundException.class, () -> unit.deleteTransaction(444, user));
     }
 
     private TransactionDTO getTransactionDTO() {
@@ -194,25 +184,10 @@ public class TransactionServiceTest {
         );
     }
 
-    private Transaction transactionFromTransactionDTO(TransactionDTO transactionDTO) {
-        return new Transaction(
-                "someId",
-                "user-transactionId",
-                transactionDTO.name(),
-                LocalDateTime.now(),
-                transactionDTO.type(),
-                transactionDTO.currency(),
-                transactionDTO.value(),
-                transactionDTO.category(),
-                transactionDTO.description(),
-                transactionDTO.paymentMethod().orElse(null)
-        );
-    }
-
-    private Transaction createTransaction(String id) {
+    private Transaction createTransaction(int id, int userId) {
         return new Transaction(
                 id,
-                "user-transactionId",
+                userId,
                 "Salary Paycheck",
                 LocalDateTime.now(),
                 "income",
@@ -226,7 +201,7 @@ public class TransactionServiceTest {
 
     private EditTransactionRequest getEditTransactionRequest() {
         return new EditTransactionRequest(
-                "someId",
+                123,
                 "Updated Salary Paycheck",
                 "income",
                 "USD",
@@ -239,10 +214,10 @@ public class TransactionServiceTest {
     }
 
     private User getUser() {
-        return new User("john.doe@mail.com", "password", "user", "John", "Doe");
+        return new User(555, "john.doe@mail.com", "password", "user", "John", "Doe");
     }
 
-    private User getUser(String userId) {
+    private User getUser(int userId) {
         User user = getUser();
         user.setUserId(userId);
         return user;
